--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
     "@vuepress/plugin-pwa": "^1.0.0-alpha.0",
     "release-it": "^10.3.1",
     "vuepress": "^1.0.0-alpha.44"
+  },
+  "dependencies": {
+    "node-sass": "^4.11.0",
+    "resize-observer-polyfill": "^1.5.1",
+    "sass-loader": "^7.1.0"
   }
 }
