--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "devDependencies": {
     "gh-pages": "^2.0.1",
     "release-it": "^10.3.1",
-    "vuepress": "^1.0.0-alpha.47"
+    "vuepress": "^1.0.1"
   },
   "dependencies": {
     "node-sass": "^4.11.0",
